<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/textView8_String"
        android:textColorHint="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView6_String" />

    <EditText
        android:id="@+id/txt_cedula_String"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_cedula_String"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView7_String" />

    <EditText
        android:id="@+id/txt_contrasena_String"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_contrasena_String"
        android:inputType="textPassword"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ingresar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registrar" />
</LinearLayout>